--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+ACCESS_TOKEN_KEY="secretKey"
+ACCESS_TOKEN_TIME="5d"
