feat: Add Gemini module and controller

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=pub
 
 ACCESS_TOKEN_KEY="secretKey"
 ACCESS_TOKEN_TIME="5d"
+
+GEMINI_API_KEY=
